# MLX8-W3-VisionTransformer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.aj/: encoder.ipynb  final_model_attn_val.ipynb  final_model_val.ipynb  mnist_vit_4_enc_dec.pth  mnist_vit_encoder.pth  mnist_vit_encoder_256x256.pth  mnist_vit_multi_final.pth  mnist_vit_multi_stitch.pth  multi_encoder.ipynb  multi_stitch_val.ipynb  train_4_vit.py  train_encoder.py  train_encoder_250x250.py  train_encoder_256x256.py  train_encoder_sweep.py  train_multi_vit.py  train_multi_vit_final.py  train_multi_vit_final_attn.py  train_multi_vit_pert.py
.bb/: 00_encoder_dataprojection.py  01_encoder_model.py  encoder_data.py  encoder_model.py  encoder_model1.pth  encoder_train.py  test_encoder_data.py
.bb/wandb/: latest-run
.bb/wandb/run-20250625_161301-obhp3uqm/: run-obhp3uqm.wandb
.bb/wandb/run-20250625_161453-zrrbw4qb/: run-zrrbw4qb.wandb
.bb/wandb/run-20250625_162051-v9gno4zz/: run-v9gno4zz.wandb
.bb/wandb/run-20250625_162111-ofxrox9p/: run-ofxrox9p.wandb
.bb/wandb/run-20250625_163020-xzokqfqw/: run-xzokqfqw.wandb
.bb/wandb/run-20250625_163224-kjstpeaf/: run-kjstpeaf.wandb
.bb/wandb/run-20250625_163343-xjze5vjc/: run-xjze5vjc.wandb
.bb/wandb/run-20250625_163445-211oxejx/: run-211oxejx.wandb
.bb/wandb/run-20250625_163817-flxzriyg/: run-flxzriyg.wandb
.bb/wandb/run-20250625_164227-cd7im8in/: run-cd7im8in.wandb
.bb/wandb/run-20250625_164434-apdzdu4f/: run-apdzdu4f.wandb
asc/: config.py  encoder_data.py  encoder_model.py  encoder_train.py
asc/wandb/: latest-run
(+44 files in other folders)
