[project]
name = "mlx8-w3-visiontransformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "filelock==3.18.0",
    "fonttools==4.58.4",
    "fsspec==2025.5.1",
    "ipykernel>=6.29.5",
    "jinja2==3.1.6",
    "kiwisolver==1.4.8",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "mpmath==1.3.0",
    "networkx==3.5",
    "numpy==1.26.4",
    "packaging==25.0",
    "pillow==11.2.1",
    "pyparsing==3.2.3",
    "pytest>=8.4.1",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "sympy==1.14.0",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "tqdm==4.67.1",
    "typing-extensions==4.14.0",
]
